--- a/AVS353/video_archive_AVS353.htm
+++ b/AVS353/video_archive_AVS353.htm
@@ -41,10 +41,12 @@ The migration of endoderm and formation of the mesoderm coincides with invaginat
 <P>
 <B>Pregnancy and Foaling</B><br>
 <p><Blockquote>
+<A HREF=https://video.maine.edu/media/2021-04-14_AVS+353_Lecture_Intro-to-foaling-videos./1_wq3ea4ri>2021-04-14</A> Some preparation for the following videos.<p>
 <A HREF=https://video.maine.edu/media/AVS353_0054_11monthsofintrauterineactivity_video-2020-04-15/1_bwtegdyq>Click here</A> to see a video by Dr Ginther on movements of the fetus during pregnancy. (This video is copyrighted and is shown here for students in AVS 353 at the University of Maine.)<p>
 <A HREF=https://video.maine.edu/media/Foaling+video/1_08o6762r>Click here</A> to see a good foaling video (also copyrighted)<p>
 <A HREF=https://video.maine.edu/media/Movingpoetry/1_iwl2xvm1>Click here</A> to see a foal born at night at the Witter Center<p>
 <A HREF=https://video.maine.edu/media/Foalingchase/1_5730kbre>Click here</A> to see an induced foaling at the Witter Center<p>
+<A HREF=https://video.maine.edu/media/2021-04-21_AVS+353_Lecture_Events_of_Pregnancy_and_foaling./1_6jigp1py>2021-04-21</A> The timing of key events during pregnancy and parturition, and early life of the foal.<p>
 
 
 </Blockquote>
