updating AVS303and353

--- a/AVS196_303/AVS303_Lecture_Material/901_lecture_video.htm
+++ b/AVS196_303/AVS303_Lecture_Material/901_lecture_video.htm
@@ -26,7 +26,7 @@
 			<A HREF=https://video.maine.edu/media/2021_04_12_AVS196-303_Joint-Lecture_Parts-of-horse/1_gl65zsyc>2021-04-12</A> A brief description of the common terms used to describe equine anatomy. <p>
 			<A HREF=https://video.maine.edu/media/2021_04_19_AVS196-303_Joint-Lecture_Lower-leg-anatomy/1_m61ovy6a>2021-04-19</A> A more detailed description of equine anatomy, especially the lower leg. <p>
 		</blockquote>	<H3>Lameness</H3> <blockquote>
-			<!--<A HREF=>Link text</A>--><p>
+			<A HREF=https://video.maine.edu/media/2021_04_26_AVS196-303_Joint-Lecture_Lameness_evaluation/1_6bdal735>2021-04-26</A> Physical examination of lameness.<p>
 		</blockquote>	<H3>Infectious Diseases</H3> <blockquote>
 			<!--<A HREF=>Link text</A>--><p> </blockquote>	<H3>Self-Assessment</H3> <blockquote>
 			<!--<A HREF=>Link text</A>--><p>
