--- a/AVS353/video_archive_AVS353.htm
+++ b/AVS353/video_archive_AVS353.htm
@@ -51,7 +51,9 @@ The migration of endoderm and formation of the mesoderm coincides with invaginat
 
 </Blockquote>
 <B>The Stallion</B><br>
-<p>
+<Blockquote>
+<A HREF=https://video.maine.edu/media/2021-04-28_AVS+353_Lecture_The+_Stallion/1_zzc4pyhx>2021-04-28</A> The reproductive biology of the stallion, breeding soundness evaluation, and breeding management<p>
+</Blockquote>
 <B>Drug Use in Equine Reproduction</B><BR>
 <P>
 <B>Nutrition on the Breeding Farm</B><br>
