--- a/AVS146/To_Do_List_AVS146.htm
+++ b/AVS146/To_Do_List_AVS146.htm
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <HTML>
 <HEAD>
-<TITLE>To Do List for AVS 146</TITLE>
+<TITLE>Welcome to AVS 146 - Introduction to  Animal Science Laboratory </TITLE>
 <style>
 h1 { font-size:35px;}
 body {
@@ -14,15 +14,22 @@ a {
 </head>
 </HEAD>
 <BODY bgcolor=GainsBoro>
-	<H1><P ALIGN=CENTER><B>To Do List for AVS 146<BR><BR></B></H1>
-This page contains all the assignments associated with each lab of this class so far, along with links to the resources (lab videos or printed handouts) necessary. The assignments consist of a short quiz. If you have questions please do not hesitate to reach out to me by text at 207-922-7475 or email at rcausey@maine.edu. As additional labs are completed they will be added to this page.<p>
-I have put in due dates to motivate you to get them done. The dairy quiz is pretty long, but the rest are shorter.  I suggest doing them quickly while they are fresh in your mind. If you need an extension I will happily grant it if you ask me. You may repeat each quiz until you get a perfect score.<P>
-<B><U>Area Specific Training</U></B><br>
-Link to video: <A HREF=https://video.maine.edu/media/Area+Specific+Training/1_oltfvd7r>AST Video </A> <br> 
-This video is for review purposes only. It is good information but you need to take area specific training in person. <br>There is no assignment with this video<P>
+	<H1><P ALIGN=CENTER><B>AVS 146 - Introduction to Animal Science Laboratory<BR><BR></B></H1>
+On this page we will post all the assignments associated with each lab of this class, along with links to the resources (lab videos or printed handouts) necessary. The assignments consist of a short quiz. If you have questions please do not hesitate to reach out to me by text at 207-922-7475 or email at rcausey@maine.edu. As labs are completed they will be added to this page.<p>
+<b>Course Syllabus:</b> <blockquote><A HREF=https://robertcausey.github.io/AVS146/Fall2021_AVS146_Syllabus.pdf>AVS146 Syllabus</A> </blockquote><p>
+<!--<B><U>Area Specific Training</U></B><blockquote><p>
+Link to video: <A HREF=https://video.maine.edu/media/Area+Specific+Training/1_oltfvd7r>AST Video </A> </blockquote><p> 
+This video is for review purposes only. It is good information but you need to take area specific training in person. <br>There is no assignment with this video<P>-->
+<B>Online Basic and Farm Safety Training</b><blockquote>
+<A HREF=http://robertcausey.github.io/AVS146/AVS146-welcomewitter.html>Welcome to Witter</A></blockquote><P>
+<!--
 <U><B>Trip to farm</B></U><br>
 The introductory walk to the farm and tour of the animals &nbsp; &nbsp;<A HREF=https://video.maine.edu/media/AVS+146+Lab+1/1_fol1m62m>Video of walk to farm </A><br>
-There is no assignment for this lab.<p>
+There is no assignment for this lab.<p>-->
+</BODY>
+</HTML>
+<!--
+I have put in due dates to motivate you to get them done. The dairy quiz is pretty long, but the rest are shorter.  I suggest doing them quickly while they are fresh in your mind. If you need an extension I will happily grant it if you ask me. You may repeat each quiz until you get a perfect score.<P>
 <B><U>Dairy Cows</U></B><br>
 Link to videos: <A HREF=https://video.maine.edu/media/AVS+146+Lab+2+Part+1/1_herd7kkb>Dairy Cow Video 1</A>   &nbsp; &nbsp;     <A HREF=https://video.maine.edu/media/AVS+Lab+2+Part+2/1_0nxl2s0u>Dairy Cow Video 2</A> <br> 
 Link to printed material: <A HREF=http://robertcausey.github.io\AVS146\dairy_cows.pdf>Dairy Cow Handout</A><br>
@@ -46,8 +53,7 @@ Link to sheep quiz: <A HREF=https://forms.gle/ppwQARw9STQUryy48>Sheep Quiz</A> D
 Link to videos: <A HREF=https://youtu.be/OZZqI4WqbZo>Beef-branding</A> <br> 
 Link to printed material: There is no printed material for this lab (except for the hides with UMO branded on them).<br>
 Link to Beef-branding quiz: <A HREF=https://forms.gle/gotzPNWn4MjVz1BMA>Beef-branding quiz</A> Due November 18th <p>
-</BODY>
-</HTML>
+-->
 
 
 
