--- a/AVS146/AVS146-welcomewitter.html
+++ b/AVS146/AVS146-welcomewitter.html
@@ -11,7 +11,7 @@ a {
 </HEAD>
 <BODY bgcolor=GainsBoro>
 <CENTER><H1>Welcome to the Witter Center</H1>
-<H3>AVS 146</H3></CENTER>
+<H3>AVS 146 Introduction to Animal Science Laboratory</H3></CENTER>
 <P>
 			Hi everyone! Welcome to the Witter Center! <P>To begin, here are some "virtual chores" we need you to do. It is necessary paperwork and documentation of various trainings.  You can access it through the links below.<p>
 You need to do the following:<p>
