--- a/AVS146/To_Do_List_AVS146.htm
+++ b/AVS146/To_Do_List_AVS146.htm
@@ -20,7 +20,7 @@ On this page we will post all the assignments associated with each lab of this c
 <!--<B><U>Area Specific Training</U></B><blockquote><p>
 Link to video: <A HREF=https://video.maine.edu/media/Area+Specific+Training/1_oltfvd7r>AST Video </A> </blockquote><p> 
 This video is for review purposes only. It is good information but you need to take area specific training in person. <br>There is no assignment with this video<P>-->
-<B>Online Basic and Farm Safety Training</b><blockquote>
+<B>Online Basic and Farm Safety Training</b> (Due September 8th) <blockquote>
 <A HREF=http://robertcausey.github.io/AVS146/AVS146-welcomewitter.html>Welcome to Witter</A></blockquote><P>
 <!--
 <U><B>Trip to farm</B></U><br>
