--- a/AVS393/stblec1_2021.htm
+++ b/AVS393/stblec1_2021.htm
@@ -48,6 +48,10 @@ This is primarily a lecture class. Opportunities for hands-on driving experience
 Links to class information assignemnts and exams will be posted on Bright Space.<p>
 <B>Schedule of topics to be covered:</B><BR>
 Harness Racing 101<br>
+<blockquote>
+	<A HREF=https://robertcausey.github.io/AVS393/hr101.pdf>HR101 handout</A><P>
+	<A HREF=https://forms.gle/zWFxpN2egHGm1Ckn8>Submit assignment</A><P>
+</blockquote>
 Reading a Racing Program - Horse information<br>
 Reading a Racing Program - Race information<br>
 Parimutuel Wagering<br>
