--- a/AVS393/stblec1_2021.htm
+++ b/AVS393/stblec1_2021.htm
@@ -53,6 +53,12 @@ Harness Racing 101<br>
 	<A HREF=https://forms.gle/zWFxpN2egHGm1Ckn8>Submit assignment</A><P>
 </blockquote>
 Reading a Racing Program - Horse information<br>
+	<A HREF=http://robertcausey.github.io/AVS393/racpg.pdf>How to read racing program</A><P>
+	<A HREF=https://www.youtube.com/watch?v=-um5X7yOW-g>Caretaker video 1</A><P>
+	<A HREF=https://www.youtube.com/watch?v=hl0iyxqJd_0>Caretaker video 2</A><P>
+	<A HREF=https://www.youtube.com/watch?v=bv4sWKC_Cvs>Caretaker video 3</A><P>
+	<A HREF=https://www.youtube.com/watch?v=hWHsGXkR2BY>Caretaker video 4</A><P>
+	<A HREF=https://www.youtube.com/watch?v=c-WuHiAKYsA>Driver video</A><P>
 Reading a Racing Program - Race information<br>
 Parimutuel Wagering<br>
 Harness Racing Records and Databases<br>
