--- a/AVS393/stblec1_2021.htm
+++ b/AVS393/stblec1_2021.htm
@@ -47,19 +47,24 @@ This is primarily a lecture class. Opportunities for hands-on driving experience
 <P>
 Links to class information assignemnts and exams will be posted on Bright Space.<p>
 <B>Schedule of topics to be covered:</B><BR>
+<blockquote>
 Harness Racing 101<br>
 <blockquote>
+	<A HREF=https://video.maine.edu/media/20210908-AVS393-lecture_Introduction/1_k8dap6cq>20210908-Video of Lecture</A><P>
 	<A HREF=https://robertcausey.github.io/AVS393/hr101.pdf>HR101 handout</A><P>
-	<A HREF=https://forms.gle/zWFxpN2egHGm1Ckn8>Submit assignment</A><P>
+	<A HREF=https://forms.gle/zWFxpN2egHGm1Ckn8><B>Assignment 1</B></A><P>
 </blockquote>
 Reading a Racing Program - Horse information<br>
 <blockquote>
+	<A HREF=https://video.maine.edu/media/AVS393-Training+the+Standardbred/1_2yvnj62m>20210915-Video of Lecture</A><P>
 	<A HREF=http://robertcausey.github.io/AVS393/racpg.pdf>How to read racing program</A><P>
 	<A HREF=https://www.youtube.com/watch?v=-um5X7yOW-g>Caretaker video 1</A><P>
 	<A HREF=https://www.youtube.com/watch?v=hl0iyxqJd_0>Caretaker video 2</A><P>
 	<A HREF=https://www.youtube.com/watch?v=bv4sWKC_Cvs>Caretaker video 3</A><P>
 	<A HREF=https://www.youtube.com/watch?v=hWHsGXkR2BY>Caretaker video 4</A><P>
 	<A HREF=https://www.youtube.com/watch?v=c-WuHiAKYsA>Driver video</A><P>
+	<P>
+	<A HREF=https://forms.gle/vnjjzjRCU52rqiZs6><B>Assignment 2</B></A><P>
 	</blockquote>
 Reading a Racing Program - Race information<br>
 Parimutuel Wagering<br>
@@ -72,6 +77,7 @@ Lameness definitions applied to racehorses<br>
 Harness racing rules and regulations<br>
 Sales and Pedigrees<br>
 Life after racing -  Standardbred retirement and retraining<br>
+</blockquote>
 <P>
 <B>Students with Disabilities:</B><BR>
 If you have a disability for which you may be requesting an accommodation, please contact either myself or Ann Smith, Coordinator of Services for Students with Disabilities (Onward Building, 581-2319), as early as possible in the semester.
