--- a/AVS393/stblec1_2021.htm
+++ b/AVS393/stblec1_2021.htm
@@ -2,10 +2,16 @@
 <HTML>
 <HEAD>
 <TITLE>AVS 393: Homepage</TITLE>
-</HEAD>
-<BODY bgcolor=white>
+	<head>
+	<style>
+	h1 { font-size:35px;}
+	body {color:black;font-size:25px;}
+	a {color: DarkMagenta;}
+	</style>
+	</head>
+	<BODY bgcolor=GainsBoro>
  <BR>
-<P ALIGN=CENTER><FONT SIZE=4><B>AVS 393 Training the Standardbred Horse<BR><BR></B></FONT>
+ <CENTER><H1><B>AVS 393 Training the Standardbred Horse<BR><BR></B></H1>
 <B> Course Instructor:</B><BR>
  
 Robert C. Causey. 
@@ -14,6 +20,7 @@ Robert C. Causey.
 <BR>Tel: 207-922-7475 
 <BR>Email: rcausey@maine.edu 
 <BR>Office: Witter Center/Rogers/...and my office in the clouds 
+</CENTER>
 </P>
 <P><B>Course Objective:<BR>
 </B>-To educate students about the harness racing industry.<BR>
@@ -27,7 +34,7 @@ After attending this class student should be able to:<BR>
 - Understand the essential biology of the horse as it relates to harness racing<BR>
 - Apply this knowledge to diseases of metabolism, circulation, respiration, and lameness in race horses<BR>
 - Be able to read a pedigree and recognize the information used to make breeding decisions.<br>
-- Interpret Maine Harhess racing commissions rules and statutes<br>
+- Interpret Maine Harness racing commissions rules and statutes<br>
 - Discuss the options for obtaining or placing a retired standarbred racehorse<p>
 <B>Grading:</B><BR>
 Students will be administered take home study questions after some lectures, reading assignments, a midterm and a final examination. <BR>
