--- a/AVS393/stblec1_2021.htm
+++ b/AVS393/stblec1_2021.htm
@@ -74,7 +74,12 @@ Reading a Racing Program - Horse information<br>
 	<A HREF=https://forms.gle/vnjjzjRCU52rqiZs6><B>Assignment 2</B></A><P>
 	</blockquote>
 Reading a Racing Program - Race information<br>
+	<blockquote>
+	<A HREF=https://video.maine.edu/media/20210922-AVS393-Lecture_reading+a+racing+program_race_information/1_8hdaoe7b>20210922-Video of lecture</A></blockquote>
 Parimutuel Wagering<br>
+<blockquote>
+	<A HREF=https://video.maine.edu/media/20210929-AVS393-Lecture_parimutuel+wagering/1_xty2b64e>20210929-Video of lecture</A><P>
+	<A HREF=http://robertcausey.github.io/AVS393/at_the_races/20201005_race_prog.htm> <B>Assignment 3</B></A> </blockquote>
 Harness Racing Records and Databases<br>
 Equine anatomy - digestive, respiratory, and cardiovascular<br>
 The (very) basics of equine nutrition and exercise physiology<br>
