updating day at races

--- a/AVS393/at_the_races/20201005_race_prog.htm
+++ b/AVS393/at_the_races/20201005_race_prog.htm
@@ -8,7 +8,7 @@
 <B><I>Please note: this exercise is not intended to encourage you to bet. It is intended for you to learn how performance of a racehorse is recorded, and how the betting process works. This knowledge is valuable if you wish to be professionally involved in the racing industry, perhaps as a veterinarian, farrier, trainer, groom, judge, regulator, racing secretary, etc, or involved in racing data management.<p></I></B><P> 
 Please follow this link if you would like to know more about gambling addiction. I am not qualified to discuss it from a clinical perspective, but you should be aware that the problem exists.<p>
 <A HREF=http://www.mayoclinic.org/diseases-conditions/compulsive-gambling/symptoms-causes/syc-20355178>Link to gambling addiction information</A><p>
-Below is a link to the Bangor Raceway program for last Wednesday's races (2020-10-07). <p>
+Below is a link to the Bangor Raceway program for races on 2020-10-07. <p>
 <A HREF=http://robertcausey.github.io/AVS393/at_the_races/day_at_races.pdf>Race programs are shown here.</A><p> 
 <b>Assignment</b><P>
 Please estimate the first, second, and third horse in each race based on information in the programs. I suggest you study all the race programs first, write down your predictions, and then fill out the form.<p> 
@@ -17,11 +17,11 @@ After you have made your predictions look to see how you did. Here is the link t
 <A HREF=https://www.hollywoodcasinobangor.com/racing/watch-live-races-replays> Link to race replays</A><p>
 The videos will show the results of the race and what each horse would pay for a $2 bet.<p>
 If you can't be bothered to watch the videos you can also see race results if you follow these links....<p>
-<A HREF=http://ustrotting.com>Link to USTA website</A> --> Entries/Results -->Parimutuel Track (Pick Bangor Raceway). This will give you the results and how much a win, place, show, exacta and trifecta bet paid for a $2 wager. Select the results for 10/7/2020 with 10 races. (Note there was a race on 10/7/2020 which says "qua".  Any ideas what that means?<p>
+<!--<A HREF=http://ustrotting.com>Link to USTA website</A> to  Entries/Results to Parimutuel Track (Pick Bangor Raceway). This will give you the results and how much a win, place, show, exacta and trifecta bet paid for a $2 wager. Select the results for 10/7/2020 with 10 races. (Note there was a race on 10/7/2020 which says "qua".  Any ideas what that means?<p>-->
 FYI: here is a place to get free programs for other races around the country.<p><A HREF=https://www.trackmaster.com/usta>Free race programs</A>
 <p>
-<b>Optional Assignment</b><p>
-Assume you placed $2 for your first place horse to win, how much money will you have made or lost at the end of the day? You can just email me your response.<p>
+<!--<b>Optional Assignment</b><p>
+Assume you placed $2 for your first place horse to win, how much money will you have made or lost at the end of the day? You can just email me your response.<p>-->
 </BODY>
 </HTML>
 
