--- a/Bolshoi/spartacus.html
+++ b/Bolshoi/spartacus.html
@@ -34,7 +34,7 @@
 
 <A HREF=https://www.youtube.com/watch?v=G2scyVgQuAA>Part 8</A><P>
 
-Another version of the Adagio of <A HREF=https://youtu.be/JN8gkmIa6yA>Mikhail Lobukhin Spartacus and Phrygia</A><P>
-Orchestral version of the Adagio of <A HREF=https://youtu.be/wXsDsLHasWo>Berlin Phil - Spartacus and Phrygia</A><P>
+Another version of the Adagio of Spartacus and Phrygia <A HREF=https://youtu.be/JN8gkmIa6yA>Mikhail Lobukhin and Anna Nikulina- Bolshoi</A><P>
+Orchestral version of the Adagio of Spartacus and Phrygia <A HREF=https://youtu.be/wXsDsLHasWo>Ion Marin - Berlin Philharmonic</A><P>
 </BODY>
 </HTML>
