--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ a {
 <BODY bgcolor=GainsBoro>
 <H1><CENTER>Robert Causey - Helpful Links for Students</CENTER></H1>
 <P>
-<div align="right"><I>Updated Wednesday 15th September 2021</I></div>
+<div align="right"><I>Updated Tuesday 9th November 2021</I></div>
 <!--<center>
 <H2> Link to Assignments List for AVS 146 </H2>
 		<A HREF= http://robertcausey.github.io/AVS146/To_Do_List_AVS146.htm> Assignments needed to complete AVS146</A>
@@ -29,6 +29,8 @@ If you are trying to reach me feel free to call or text me at 207-922-7475. Emai
 <A HREF=advising/AVS396.pdf>AVS 396 Approval Form</A><p>
 <A HREF=http://www.aavmc.org/vmcas/vmcas.htm>VMCAS</A><P>
 <A HREF=https://robertcausey.github.io/feepass.htm>FEEPASS</A> program for Glasgow University Veterinary College<P>
+<A HREF=http://catalog.umaine.edu/preview_program.php?catoid=85&poid=12513&returnto=3442>Sequence of classes</A>. This page from the Undergraduate Catalog summarizes degree requirements and lists the recommended sequence of classes for each concentration (Animal Science, Equine Science, and Pre-Veterinary<p>
+<A HREF=https://mycampus.maine.edu/c/document_library/get_file?uuid=86b5c575-275f-43ca-a603-9b0be26ecccb&groupId=504867>Course withrawal (i.e. add-drop) form</A><p>
 </blockquote>
 <H3>Horse Barn</H3>
 <blockquote>
