--- a/AVS393/stblec1_2021.htm
+++ b/AVS393/stblec1_2021.htm
@@ -86,6 +86,8 @@ The (very) basics of equine nutrition and exercise physiology<br>
 Disorders in circulation, metabolism, and breathing of the racehorse<br>
 Equine anatomy - musculoskeletal<br>
 Lameness definitions applied to racehorses<br>
+<blockquote>
+	<A HREF=http://robertcausey.github.io/AVS393/lame.pdf>Lameness</A></blockquote>
 Harness racing rules and regulations<br>
 Sales and Pedigrees<br>
 Life after racing -  Standardbred retirement and retraining<br>
