--- a/AVS393/stblec1_2021.htm
+++ b/AVS393/stblec1_2021.htm
@@ -90,6 +90,14 @@ Lameness definitions applied to racehorses<br>
 	<A HREF=http://robertcausey.github.io/AVS393/lame.pdf>Lameness</A></blockquote>
 Harness racing rules and regulations<br>
 Sales and Pedigrees<br>
+<blockquote>
+
+
+	<A HREF=http://robertcausey.github.io/AVS393/abbreviations.pdf>Abbreviations</A><P>
+	<A HREF=http://robertcausey.github.io/AVS393/marelist.pdf>Mare list</A><P>
+	<A HREF=http://robertcausey.github.io/AVS393/sirelist.pdf>Sire list</A><P>
+	<A HREF=http://robertcausey.github.io/AVS393/pedprod.pdf>Pedigree Project</A><P>
+</blockquote>	
 Life after racing -  Standardbred retirement and retraining<br>
 </blockquote>
 <P>
