--- a/AVS393/stblec1_2021.htm
+++ b/AVS393/stblec1_2021.htm
@@ -93,7 +93,7 @@ Sales and Pedigrees<br>
 <blockquote>
 
 
-	<A HREF=http://robertcausey.github.io/AVS393/abbreviations.pdf>Abbreviations</A><P>
+	<A HREF=http://robertcausey.github.io/AVS393/sales_abbreviations.jpg>Abbreviations</A><P>
 	<A HREF=http://robertcausey.github.io/AVS393/marelist.pdf>Mare list</A><P>
 	<A HREF=http://robertcausey.github.io/AVS393/sirelist.pdf>Sire list</A><P>
 	<A HREF=http://robertcausey.github.io/AVS393/pedprod.pdf>Pedigree Project</A><P>
