--- a/AVS393/stblec1_2021.htm
+++ b/AVS393/stblec1_2021.htm
@@ -101,6 +101,8 @@ Sales and Pedigrees<br>
 Life after racing -  Standardbred retirement and retraining<br>
 </blockquote>
 <P>
+<blockquote>
+	<A HREF=https://forms.gle/NbveQ9RchqW2hq2t6> <B>Assignment 4</B></A> </blockquote>
 <B>Students with Disabilities:</B><BR>
 If you have a disability for which you may be requesting an accommodation, please contact either myself or Ann Smith, Coordinator of Services for Students with Disabilities (Onward Building, 581-2319), as early as possible in the semester.
 <P>
