--- a/AVS353/video_archive_AVS353.htm
+++ b/AVS353/video_archive_AVS353.htm
@@ -19,9 +19,18 @@ a {
 <B>Welcome!</B><BR>
 The purpose of this page is to provide links to videos of lectures and  movies used in class. The videos are grouped according to subject. Lecture videos are labelled by date of the lecture.<p>
 <B>Aristotle and Equine Reproduction</B><BR>
-<A HREF=https://video.maine.edu/media/2021-01-27_AVS+353+Equine+Reproduction_Intro+and+Aristotle/1_cxtk69y7>2021-01-27 Lecture</A> in which we grade Aristotle on his knowledge of equine reproduction<p>
+<A HREF=https://video.maine.edu/media/2022-01-19_AVS+353_Grading_Aristotle./1_d5l680qb>2022-01-19 Lecture</A> in which we grade Aristotle on his knowledge of equine reproduction.<BR><A HREF=https://video.maine.edu/media/2021-01-27_AVS+353+Equine+Reproduction_Intro+and+Aristotle/1_cxtk69y7>2021-01-27 Lecture</A> <p>
 <p>
-<B>Basic Mammalian Reproduction</B><BR><A HREF=https://video.maine.edu/media/2020-02-03_AVS+353_Lecture_Basic-Reproduction_hormones/1_q4p51qpt>2021-02-03 Lecture</A> in which we discuss basic mammalian reproduction and hormones<p><A HREF=https://video.maine.edu/media/2020-02-10_AVS+353_Lecture_Basic-Reproduction_hormones-2/1_5giftn5x>2021-02-10 Lecture</A> in which we focus on seasonality and production of gametes<p><A HREF=https://video.maine.edu/media/2020-02-17_AVS+353_Lecture_Basic-Reproduction_hormones-3/1_bqe74ldy>2021-02-17 Lecture</A> in which we complete basic repoduction, discussing fertilization pregnancy etc<p>
+<B>Basic Mammalian Reproduction</B><BR> 
+<A HREF=https://video.maine.edu/media/2022-01-26_AVS_353_Basic_Mammalian_Reproduction/1_up8bfml6>2022-01-26 Lecture</A> in which we discuss basic mammalian reproduction and hormones<BR>
+
+<A HREF=https://video.maine.edu/media/2020-02-03_AVS+353_Lecture_Basic-Reproduction_hormones/1_q4p51qpt>2021-02-03 Lecture</A><p>
+
+<!-- XXXXXXXXXXXXXXXXXXXXXXXX--> 
+<A HREF=https://video.maine.edu/media/2020-02-10_AVS+353_Lecture_Basic-Reproduction_hormones-2/1_5giftn5x>2021-02-10 Lecture</A> in which we focus on seasonality and production of gametes<p>
+
+<!-- XXXXXXXXXXXXXXXXXXXXXXXX--> 
+<A HREF=https://video.maine.edu/media/2020-02-17_AVS+353_Lecture_Basic-Reproduction_hormones-3/1_bqe74ldy>2021-02-17 Lecture</A> in which we complete basic repoduction, discussing fertilization pregnancy etc<p>
 <p>
 <B>Reproductive Anatomy</B><BR>
 <A HREF=https://video.maine.edu/media/2020-02-24_AVS+353_Lecture_Reproductive_Anatomy_1/1_egc4h0lk>2021-02-24</A> Reproductive Anatomy: Pineal gland, hypothalamus, pituitary, ovaries, uterus, follicle, CL etc.<p>
