--- a/AVS353/video_archive_AVS353.htm
+++ b/AVS353/video_archive_AVS353.htm
@@ -27,7 +27,7 @@ The purpose of this page is to provide links to videos of lectures and  movies u
 <A HREF=https://video.maine.edu/media/2020-02-03_AVS+353_Lecture_Basic-Reproduction_hormones/1_q4p51qpt>2021-02-03 Lecture</A><p>
 
 <!-- XXXXXXXXXXXXXXXXXXXXXXXX--> 
-<A HREF=https://video.maine.edu/media/Clip+of+2022-02-02_AVS_353_Basic_Mammalian_Reproduction/1_7j068y14>2022-02-02 Lecture</A> in which we focus on seasonality, reproductive behavior, production of gametes, follicles and ovulation.<br>
+<A HREF=https://video.maine.edu/media/Clip+of+2022-02-02_AVS_353_Basic_Mammalian_Reproduction/1_1clrt0fp?st=0&ed=5160>2022-02-02 Lecture</A> in which we focus on seasonality, reproductive behavior, production of gametes, follicles and ovulation.<br>
 <A HREF=https://video.maine.edu/media/2020-02-10_AVS+353_Lecture_Basic-Reproduction_hormones-2/1_5giftn5x>2021-02-10 Lecture</A><p>
 
 <!-- XXXXXXXXXXXXXXXXXXXXXXXX--> 
