--- a/AVS353/video_archive_AVS353.htm
+++ b/AVS353/video_archive_AVS353.htm
@@ -35,13 +35,15 @@ The purpose of this page is to provide links to videos of lectures and  movies u
 <A HREF=https://video.maine.edu/media/2020-02-17_AVS+353_Lecture_Basic-Reproduction_hormones-3/1_bqe74ldy>2021-02-17 Lecture</A><p>
 <p>
 <B>Reproductive Anatomy</B><BR>
-<A HREF=https://video.maine.edu/media/2020-02-24_AVS+353_Lecture_Reproductive_Anatomy_1/1_egc4h0lk>2021-02-24</A> Reproductive Anatomy: Pineal gland, hypothalamus, pituitary, ovaries, uterus, follicle, CL etc.<p>
-<A HREF=https://video.maine.edu/media/2021-03-03_AVS+353_Lecture_Reproductive_Anatomy_2/1_kf39mrc5>2021-03-03</A> Reproductive Anatomy: Counter current exchange mechanism for systemic distribution of prostaglandin, uterine glands, myometrium, cervix, changes with cycle, etc. <p>
+<A HREF=https://video.maine.edu/media/2020-02-24_AVS+353_Lecture_Reproductive_Anatomy_1/1_egc4h0lk>2021-02-24 Lecture</A> Reproductive Anatomy: Pineal gland, hypothalamus, pituitary, ovaries, uterus, follicle, CL etc.<p>
+<A HREF=https://video.maine.edu/media/2021-03-03_AVS+353_Lecture_Reproductive_Anatomy_2/1_kf39mrc5>2021-03-03 Lecture</A> Reproductive Anatomy: Counter current exchange mechanism for systemic distribution of prostaglandin, uterine glands, myometrium, cervix, changes with cycle, etc. <p>
 <B>Reproductive Seasonality</B><BR>
-<A HREF=https://video.maine.edu/media/2021-03-10_AVS+353_Lecture_Reproductive_Seasonality/1_5nbijjky>2021-03-10</A> Reproductive Seasonality: a review of imposed breeding seasons and reproductive patterns through the year. Understanding seasonal changes in the mare is the key to making good breeding management decisions. 
+<A HREF=https://video.maine.edu/media/2022_02_16_AVS_353_reproductive+seasonality/1_s7mt4ada>2022-02-16 Lecture</A> Reproductive Seasonality: a review of imposed breeding seasons and reproductive patterns through the year. Understanding seasonal changes in the mare is the key to making good breeding management decisions.<br> 
+<A HREF=https://video.maine.edu/media/2021-03-10_AVS+353_Lecture_Reproductive_Seasonality/1_5nbijjky>2021-03-10 Lecture</A> 
 <p>
 <B>Estrous Cycle</B><br>
-<A HREF=https://video.maine.edu/media/2021-03-17_AVS+353_Lecture_Estrous-Cycle/1_vtwahzw2>2021-03-17</A> Estrous Cycle: a review of the changes between estrus and diestrus of equine behavior, ovarian dynamics (follicular growth, ovulation, CL maintenance and luteolysis), gonadotropins (FSH and LH), ovarian steroids (estrogen and progesterone), inhibin, and prostaglandin F 2 alpha. 
+<A HREF=https://video.maine.edu/media/2022_02_23_AVS_353_estrous_cycle/1_77jav7wj>2022-23-17 Lecture</A> Estrous Cycle: a review of the changes between estrus and diestrus of equine behavior, ovarian dynamics (follicular growth, ovulation, CL maintenance and luteolysis), gonadotropins (FSH and LH), ovarian steroids (estrogen and progesterone), inhibin, and prostaglandin F 2 alpha.<br> 
+<A HREF=https://video.maine.edu/media/2021-03-17_AVS+353_Lecture_Estrous-Cycle/1_vtwahzw2>2021-03-17 Lecture</A> 
 <p>
 <B>Endocrinology of Pregnancy</B><BR>
 <A HREF=https://video.maine.edu/media/2021-03-31_AVS+353_Lecture_Endocrinology_of_pregnancy/1_uiylp0pk>2021-03-31</A> Endocrinology of Pregnancy. The three luteal responses, the role of progestogens and estrogens from the ovary and fetoplacental unit (fetal gonads and placenta) in supporting pregnancy. Appearance of equine chorionic gonadotropin to drive second and third luteal responses. 
