updating links to AVS353 lectures

--- a/AVS353/video_archive_AVS353.htm
+++ b/AVS353/video_archive_AVS353.htm
@@ -35,8 +35,9 @@ The purpose of this page is to provide links to videos of lectures and  movies u
 <A HREF=https://video.maine.edu/media/2020-02-17_AVS+353_Lecture_Basic-Reproduction_hormones-3/1_bqe74ldy>2021-02-17 Lecture</A><p>
 <p>
 <B>Reproductive Anatomy</B><BR>
-<A HREF=https://video.maine.edu/media/2020-02-24_AVS+353_Lecture_Reproductive_Anatomy_1/1_egc4h0lk>2021-02-24 Lecture</A> Reproductive Anatomy: Pineal gland, hypothalamus, pituitary, ovaries, uterus, follicle, CL etc.<p>
-<A HREF=https://video.maine.edu/media/2021-03-03_AVS+353_Lecture_Reproductive_Anatomy_2/1_kf39mrc5>2021-03-03 Lecture</A> Reproductive Anatomy: Counter current exchange mechanism for systemic distribution of prostaglandin, uterine glands, myometrium, cervix, changes with cycle, etc. <p>
+<A HREF=https://video.maine.edu/media/2022_03_02_AVS_353_estrous_cycle_reproductive_anatomy/1_z44hk818>2022-03-02 Lecture</A> Estrous cycle review and Reproductive Anatomy: Pineal gland, hypothalamus, pituitary, ovaries, uterus, follicle, CL, counter current exchange mechanism for systemic distribution of prostaglandin, uterine glands, myometrium, cervix, changes with cycle, etc.<br>
+<A HREF=https://video.maine.edu/media/2020-02-24_AVS+353_Lecture_Reproductive_Anatomy_1/1_egc4h0lk>2021-02-24 Lecture</A> <br>
+<A HREF=https://video.maine.edu/media/2021-03-03_AVS+353_Lecture_Reproductive_Anatomy_2/1_kf39mrc5>2021-03-03 Lecture</A>  <p>
 <B>Reproductive Seasonality</B><BR>
 <A HREF=https://video.maine.edu/media/2022_02_16_AVS_353_reproductive+seasonality/1_s7mt4ada>2022-02-16 Lecture</A> Reproductive Seasonality: a review of imposed breeding seasons and reproductive patterns through the year. Understanding seasonal changes in the mare is the key to making good breeding management decisions.<br> 
 <A HREF=https://video.maine.edu/media/2021-03-10_AVS+353_Lecture_Reproductive_Seasonality/1_5nbijjky>2021-03-10 Lecture</A> 
@@ -46,7 +47,10 @@ The purpose of this page is to provide links to videos of lectures and  movies u
 <A HREF=https://video.maine.edu/media/2021-03-17_AVS+353_Lecture_Estrous-Cycle/1_vtwahzw2>2021-03-17 Lecture</A> 
 <p>
 <B>Endocrinology of Pregnancy</B><BR>
-<A HREF=https://video.maine.edu/media/2021-03-31_AVS+353_Lecture_Endocrinology_of_pregnancy/1_uiylp0pk>2021-03-31</A> Endocrinology of Pregnancy. The three luteal responses, the role of progestogens and estrogens from the ovary and fetoplacental unit (fetal gonads and placenta) in supporting pregnancy. Appearance of equine chorionic gonadotropin to drive second and third luteal responses. 
+<A HREF=https://video.maine.edu/media/2022_03_09_AVS_353_endocrinology_of_pregnancy/1_5ijrgehc>2022-03-09 Lecture</A> Endocrinology of Pregnancy. The three luteal responses, the role of progestogens and estrogens from the ovary and fetoplacental unit (fetal gonads and placenta) in supporting pregnancy. Appearance of equine chorionic gonadotropin to drive second and third luteal responses. <br>
+<A HREF=https://video.maine.edu/media/2022_03_23_AVS_353_endocrinology_of_pregnancy/1_wbox6hzk>2022-03-23 Lecture</A> Development of the fetus.<br>
+<A HREF=https://video.maine.edu/media/2022_03_30_AVS_353_fetal_development/1_7kswb5rw>2022-03-30 Lecture</A> Later development of fetus and fetal movement.<br>
+<A HREF=https://video.maine.edu/media/2021-03-31_AVS+353_Lecture_Endocrinology_of_pregnancy/1_uiylp0pk>2021-03-31 Lecture</A> 
 <P>
 <A HREF=https://video.maine.edu/media/2021-04-08_AVS+353_Lecture_Endocrinology_of_pregnancy_2/1_txopdujs>2021-04-07</A> The embryonic vesicle, its mobility. Early embryology related to appearance on ultrasound. Allantois and yolk sac. Formation of the three walled placenta.<P> 
 <A HREF=https://www.youtube.com/watch?v=dAOWQC-OBv0>Video on Basic Embryology.</A> This video explains key concepts in early embryology. The inner cell mass or embryonic disk consists of two layers of cells (epiblast and hypoplast, epi meaning "upon", and hypo meaning "under"), like two slices of bread.  Cells of the epiblast multiply and form a new middle layer, to create a sandwich. The three layers are called ectoderm (from the epiblast - this will become the skin and nervous tissue), mesoderm (the middle layer, which will becomes bone, muscle, connective tissue and the cardiovascular system), and endoderm (the gut and related structures such as liver). The endoderm migrates and spreads under the chorion, forming an inner wall of the blastocyst, creating the yolk sack. The mesoderm then migrates between the ectoderm (chorion) and endoderm creating a middle layer, serving as a robust system of blood vessels for the placenta. The three layers of the placenta represent the three layers of the embryonic disc (ectoderm, mesoderm, endoderm).   <P>
@@ -54,6 +58,7 @@ The migration of endoderm and formation of the mesoderm coincides with invaginat
 <P>
 <B>Pregnancy and Foaling</B><br>
 <p><Blockquote>
+<A HREF=https://video.maine.edu/media/2022-04-13_AVS353_pregnancy_and_foaling/1_e2hnvk5i>2022-04-13 Lecture</A> Management through pregnancy and videos of fetal positioning.<br>
 <A HREF=https://video.maine.edu/media/2021-04-14_AVS+353_Lecture_Intro-to-foaling-videos./1_wq3ea4ri>2021-04-14</A> Some preparation for the following videos.<p>
 <A HREF=https://video.maine.edu/media/AVS353_0054_11monthsofintrauterineactivity_video-2020-04-15/1_bwtegdyq>Click here</A> to see a video by Dr Ginther on movements of the fetus during pregnancy. (This video is copyrighted and is shown here for students in AVS 353 at the University of Maine.)<p>
 <A HREF=https://video.maine.edu/media/Foaling+video/1_08o6762r>Click here</A> to see a good foaling video (also copyrighted)<p>
