updating syllabi AVS353 and AVS393

--- a/AVS353/REPRO.HTM
+++ b/AVS353/REPRO.HTM
@@ -24,7 +24,17 @@ a {
 </P>
 - To teach students how to apply this knowledge in the field of horse breeding.</P>
 </P>
--To acquaint students with techniques of assisted equine reproduction (artificial insemination, semen freezing, and embryo transfer).</P>
+- To acquaint students with techniques of assisted equine reproduction (artificial insemination, semen freezing, and embryo transfer).</P>
+</P>
+</Blockquote>
+<B>Learning Outcomes:</P></B>
+At the end of this class students will be able to:</p>
+<Blockquote>
+- Describe the basic physiology and reproductive anatomy of the mare and stallion.</P>
+</P>
+- Be able to determine if a mare is proceeding through pregnancy and foaling normally.</P>
+</P>
+- Understand the principles of a breeding soundness evaluation in a stallion.</P>
 </P>
 </Blockquote>
 <B>Grading:</P>
