--- a/AVS393/stblec1_2021.htm
+++ b/AVS393/stblec1_2021.htm
@@ -22,13 +22,13 @@ Robert C. Causey.
 <BR>Office: Witter Center/Rogers/...and my office in the clouds 
 </CENTER>
 </P>
-<P><B>Course Objective:<BR>
+<P><B>Course Goals:<BR>
 </B>-To educate students about the harness racing industry.<BR>
 <BR>
 -To educate students on the ethical, humane, and safe management of the  standardbred race horses.<BR>
 <BR>
 -To educate students about the economics of training standardbred race horses industry.<p>
-<B>Course Goals:</B><BR>
+<B>Learning Outcomes:</B><BR>
 After attending this class student should be able to:<BR>
 - Read and understand a racing program<BR>
 - Understand the essential biology of the horse as it relates to harness racing<BR>
