--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ If you are trying to reach me feel free to call or text me at 207-922-7475. Emai
 </blockquote>
 <H3>Links to courses</H3>
 <blockquote>
-<A HREF= http://robertcausey.github.io/AVS146/To_Do_List_AVS146.htm>AVS 146 - Introduction to Animal Science Laboratory</A><p>
+<A HREF= http://robertcausey.github.io/AVS146/Fall2021_AVS146_Syllabus.pdf>AVS 146 - Introduction to Animal Science Laboratory</A><p>
 <A HREF=https://robertcausey.github.io/AVS196_303/AVS303_Lecture_Material/900_lecture_materials.htm>AVS 196 - Introduction to Equine Management Cooperative</A><p> 
 <A HREF=https://robertcausey.github.io/AVS196_303/AVS303_Lecture_Material/900_lecture_materials.htm>AVS 303 - Equine Management Cooperative</A><p>
 <A HREF=https://robertcausey.github.io/AVS353/REPRO.HTM>AVS 353 - Equine Reproduction and Breeding Management</A><p>
