--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ If you are trying to reach me feel free to call or text me at 207-922-7475. Emai
 <A HREF=https://robertcausey.github.io/AVS196_303/AVS303_Lecture_Material/900_lecture_materials.htm>AVS 303 - Equine Management Cooperative</A><p>
 <A HREF=https://robertcausey.github.io/AVS353/REPRO.HTM>AVS 353 - Equine Reproduction and Breeding Management</A><p>
 <A HREF=https://robertcausey.github.io/AVS393/stblec1_2021.htm>AVS 393 - Training the Standardbred Horse</A><p>
-<A HREF=https://robertcausey.github.io/AVS397/397_AVS.htm>AVS 397 - Equine Intership</A><p>
+<A HREF=https://robertcausey.github.io/AVS397/syllabusAVS397.pdf>AVS 397 - Equine Intership</A><p>
 <A HREF=https://robertcausey.github.io/RLE150/rle150.htm>RLE 150 - Greener Pastures</A><p>
 </blockquote>
 <H3>Safety Links</H3>
