uploading farrier form

--- a/medical_records/medical_records.htm
+++ b/medical_records/medical_records.htm
@@ -13,6 +13,7 @@ a {color: DarkMagenta;}
 	<H3>These forms for use in UMaine Horse Barn</H3>
 	<A HREF=https://forms.gle/J6sjYnopm2uB6sbv7>Physical Exam Form</A><p>
 	<A HREF=https://forms.gle/oJ5KhZCXj8RWimxa7>Soap Form</A><p>
+	<A HREF=https://forms.gle/qQorSSqeAorwRUJx8>Farrier Form</A><P>
 	<A HREF=>Lameness Exam Form</A><p>
 	<A HREF=>Neuro Exam Form</A><p>
 	<A HREF=>Foal exam Form</A><p>
