link to racing videos updated

--- a/AVS393/stblec1_2021.htm
+++ b/AVS393/stblec1_2021.htm
@@ -71,7 +71,7 @@ Reading a Racing Program - Horse information<br>
 	<A HREF=https://www.youtube.com/watch?v=hWHsGXkR2BY>Caretaker video 4</A><P>
 	<A HREF=https://www.youtube.com/watch?v=c-WuHiAKYsA>Driver video</A><P>
 	<P>
-	<A HREF=https://forms.gle/vnjjzjRCU52rqiZs6><B>Assignment 2</B></A><P>
+	<A HREF=https://forms.gle/vnjjzjRCU52rqiZs6><B>Assignment 2 - racing programs and impressions</B></A><P>
 	</blockquote>
 Reading a Racing Program - Race information<br>
 	<blockquote>
@@ -79,7 +79,7 @@ Reading a Racing Program - Race information<br>
 Parimutuel Wagering<br>
 <blockquote>
 	<A HREF=https://video.maine.edu/media/20210929-AVS393-Lecture_parimutuel+wagering/1_xty2b64e>20210929-Video of lecture</A><P>
-	<A HREF=http://robertcausey.github.io/AVS393/at_the_races/20201005_race_prog.htm> <B>Assignment 3</B></A> </blockquote>
+	<A HREF=http://robertcausey.github.io/AVS393/at_the_races/20201007_race_prog.htm> <B>Assignment 3 - at the races</B></A> </blockquote>
 Harness Racing Records and Databases<br>
 Equine anatomy - digestive, respiratory, and cardiovascular<br>
 The (very) basics of equine nutrition and exercise physiology<br>
