--- a/AVS393/stblec1_2022.htm
+++ b/AVS393/stblec1_2022.htm
@@ -96,13 +96,13 @@ Sales and Pedigrees<br>
 	<A HREF=http://robertcausey.github.io/AVS393/sale_abbreviations.jpg>Abbreviations</A><P>
 	<A HREF=http://robertcausey.github.io/AVS393/marelist.pdf>Mare list</A><P>
 	<A HREF=http://robertcausey.github.io/AVS393/sirelist.pdf>Sire list</A><P>
-	<A HREF=https://forms.gle/NUG4tr8T2CY976Ji8> Assignment 4 Pedigree Project</A><P>
+	<A HREF=https://forms.gle/NUG4tr8T2CY976Ji8> <B>Assignment 4 - Pedigree Project</B></A><P>
 </blockquote>	
 Life after racing -  Standardbred retirement and retraining<br>
 </blockquote>
 <P>
 <blockquote>
-	<A HREF=https://forms.gle/NbveQ9RchqW2hq2t6> <B>Assignment 55</A> </blockquote>
+	<A HREF=https://forms.gle/NbveQ9RchqW2hq2t6> <B>Assignment 5</A> </blockquote>
 <B>Students with Disabilities:</B><BR>
 If you have a disability for which you may be requesting an accommodation, please contact either myself or Ann Smith, Coordinator of Services for Students with Disabilities (Onward Building, 581-2319), as early as possible in the semester.
 <P>
