updating links to medical records

--- a/AVS196_303/AVS303_Lecture_Material/900_lecture_materials.htm
+++ b/AVS196_303/AVS303_Lecture_Material/900_lecture_materials.htm
@@ -30,6 +30,7 @@ If you haven't yet done so, please complete the necessary paperwork at <A HREF=h
 <A HREF=https://robertcausey.github.io/AVS196_303/AVS303_Lecture_Material/038_insulinresistance.pdf>Insulin Resistance</A><p>
 <A HREF=https://robertcausey.github.io/AVS196_303/AVS303_Lecture_Material/042_physical_exam1.pptx.optimized.pdf>Physical Examination</A><p>
 <A HREF=https://robertcausey.github.io/AVS196_303/AVS303_Lecture_Material/042_physical_exam2.pdf>Physical Exam Sheet</A><p>
+<A HREF=https://robertcausey.github.io/medical_records/medical_records.htm>Horse Medical Records</A><p>
 		</blockquote>	<H3>Digestion - Gut anatomy, nutrtion and feeding</H3> <blockquote>
 <A HREF=https://robertcausey.github.io/AVS196_303/AVS303_Lecture_Material/040_articles.extension.org-Feeding_Management.pdf>Feeding</A><p>
 <A HREF=https://robertcausey.github.io/AVS196_303/AVS303_Lecture_Material/040_atgutdiagram1.jpg>Gut Dagram</A><p>
