--- a/AVS393/stblec1_2022.htm
+++ b/AVS393/stblec1_2022.htm
@@ -46,63 +46,82 @@ Midterm examination: 25%<BR>
 Final examination: 25%<BR>
 <BR>
 On a 100 point scale, A=90-100, B=80-89, C=70-79, D=60-69.<BR>
+<blockquote>	<B>Updated 2022-12-02:</B> Grading will be based on the 5 assignments listed on the webpage. I have added some self-assessment exercises which are optional since they were posted close to the end of the semester. You just need to complete Assignments 1 through 5.
+</blockquote>
 <BR>
 <B>Pedigree Project:</B><BR>
 Students will be given a list of eligible stallions and the pedigrees of registered Standardbred mares, owned by the University, that are suitable prospects for breeding. Students will then select the best stallion for each mare and give reasons for their choice. <P>
 <B>Hands - on experience:</B><BR>
 This is primarily a lecture class. Opportunities for hands-on driving experience take place in the spring / summer with Valerie Grondin, the trainer of our race horses. However,  there may be an opportunity to visit the Bangor Raceway during this class.
 <P>
-Links to class information assignemnts and exams will be posted on Bright Space.<p>
+Links to class information assignments and exams will be posted on https://robertcausey.github.io/AVS393/stblec1_2022.htm <p>
 <B>Schedule of topics to be covered:</B><BR>
 <blockquote>
 Harness Racing 101<br>
 <blockquote>
-	<A HREF=https://video.maine.edu/media/20210908-AVS393-lecture_Introduction/1_k8dap6cq>20210908-Video of Lecture</A><P>
-	<A HREF=https://robertcausey.github.io/AVS393/hr101.pdf>HR101 handout</A><P>
-	<A HREF=https://forms.gle/zWFxpN2egHGm1Ckn8><B>Assignment 1</B></A><P>
+	<A HREF=https://video.maine.edu/media/20210908-AVS393-lecture_Introduction/1_k8dap6cq>20210908-Video of Lecture</A><br>
+	<A HREF=https://robertcausey.github.io/AVS393/hr101.pdf>HR101 handout</A><br>
+	<A HREF=https://forms.gle/zWFxpN2egHGm1Ckn8><B>Assignment 1</B></A><br>
 </blockquote>
 Reading a Racing Program - Horse information<br>
 <blockquote>
-	<A HREF=https://video.maine.edu/media/AVS393-Training+the+Standardbred/1_2yvnj62m>20210915-Video of Lecture</A><P>
-	<A HREF=http://robertcausey.github.io/AVS393/racpg.pdf>How to read racing program</A><P>
-	<A HREF=https://www.youtube.com/watch?v=-um5X7yOW-g>Caretaker video 1</A><P>
-	<A HREF=https://www.youtube.com/watch?v=hl0iyxqJd_0>Caretaker video 2</A><P>
-	<A HREF=https://www.youtube.com/watch?v=bv4sWKC_Cvs>Caretaker video 3</A><P>
-	<A HREF=https://www.youtube.com/watch?v=hWHsGXkR2BY>Caretaker video 4</A><P>
-	<A HREF=https://www.youtube.com/watch?v=c-WuHiAKYsA>Driver video</A><P>
-	<P>
-	<A HREF=https://forms.gle/vnjjzjRCU52rqiZs6><B>Assignment 2 - racing programs and impressions</B></A><P>
+	<A HREF=https://video.maine.edu/media/AVS393-Training+the+Standardbred/1_2yvnj62m>20210915-Video of Lecture</A><br>
+	<A HREF=http://robertcausey.github.io/AVS393/racpg.pdf>How to read racing program</A><br>
+	<A HREF=https://www.youtube.com/watch?v=-um5X7yOW-g>Caretaker video 1</A><br>
+	<A HREF=https://www.youtube.com/watch?v=hl0iyxqJd_0>Caretaker video 2</A><br>
+	<A HREF=https://www.youtube.com/watch?v=bv4sWKC_Cvs>Caretaker video 3</A><br>
+	<A HREF=https://www.youtube.com/watch?v=hWHsGXkR2BY>Caretaker video 4</A><br>
+	<A HREF=https://www.youtube.com/watch?v=c-WuHiAKYsA>Driver video</A><br>
+	<br>
+	<A HREF=https://forms.gle/vnjjzjRCU52rqiZs6><B>Assignment 2 - racing programs and impressions</B></A>
 	</blockquote>
 Reading a Racing Program - Race information<br>
 	<blockquote>
 	<A HREF=https://video.maine.edu/media/20210922-AVS393-Lecture_reading+a+racing+program_race_information/1_8hdaoe7b>20210922-Video of lecture</A></blockquote>
 Parimutuel Wagering<br>
 <blockquote>
-	<A HREF=https://video.maine.edu/media/20210929-AVS393-Lecture_parimutuel+wagering/1_xty2b64e>20210929-Video of lecture</A><P>
+	<A HREF=https://video.maine.edu/media/20210929-AVS393-Lecture_parimutuel+wagering/1_xty2b64e>20210929-Video of lecture</A><br>
 	<A HREF=http://robertcausey.github.io/AVS393/at_the_races/20201007_race_prog.htm> <B>Assignment 3 - at the races</B></A> </blockquote>
 Harness Racing Records and Databases<br>
-Equine anatomy - digestive, respiratory, and cardiovascular<br>
+<blockquote>
+<A HREF=https://forms.gle/BDWqU5nCsp4BvXMJ8><B>Self - Assessment exercise (posted 2022-12-02) Registration paperwork</B></A>
+</blockquote>
 The (very) basics of equine nutrition and exercise physiology<br>
-Disorders in circulation, metabolism, and breathing of the racehorse<br>
+<blockquote>
+	<A HREF=https://extension.uga.edu/publications/detail.html?number=B1365>Race horse nutrition</A><br>
+<A HREF=https://thehorse.com/174529/feeding-the-anaerobic-equine-athlete/>Discussion of anaerobic exercise</A>
+</blockquote>
+Disorders in breathing of the racehorse<br>
+<blockquote>
+<A HREF=https://forms.gle/M5kJfWkViuLaxv7k8><B>Self - Assessment exercise (posted 2022-12-02) Respiratory anatomy</B></A>
+</blockquote>
 Equine anatomy - musculoskeletal<br>
+<blockquote>
+<A HREF=https://forms.gle/uAVH3qH46nE3oJX59><B>Self - Assessment exercise (posted 2022-12-02) Leg anatomy and gaits</B></A>
+</blockquote>
 Lameness definitions applied to racehorses<br>
 <blockquote>
-	<A HREF=http://robertcausey.github.io/AVS393/lame.pdf>Lameness</A></blockquote>
+<A HREF=https://forms.gle/dYnhjfXpZJxdVqKy5><B>Self - Assessment exercise (posted 2022-12-02) Definition of lameness terms</B></A>
+</blockquote>
 Harness racing rules and regulations<br>
+<blockquote>
+<A HREF=https://www.maine.gov/dacf/harnessracing/laws_statutes.shtml>Maine's Harness Racing regulations</A>
+</blockquote>
 Sales and Pedigrees<br>
 <blockquote>
-
-
-	<A HREF=http://robertcausey.github.io/AVS393/sale_abbreviations.jpg>Abbreviations</A><P>
-	<A HREF=http://robertcausey.github.io/AVS393/marelist.pdf>Mare list</A><P>
-	<A HREF=http://robertcausey.github.io/AVS393/sirelist.pdf>Sire list</A><P>
-	<A HREF=https://forms.gle/NUG4tr8T2CY976Ji8> <B>Assignment 4 - Pedigree Project</B></A><P>
+	<A HREF=http://robertcausey.github.io/AVS393/sale_abbreviations.jpg>Abbreviations</A><br>
+	<A HREF=http://robertcausey.github.io/AVS393/marelist.pdf>Mare list</A><br>
+	<A HREF=http://robertcausey.github.io/AVS393/sirelist.pdf>Sire list</A><br>
+	<A HREF=https://forms.gle/NUG4tr8T2CY976Ji8> <B>Assignment 4 - Pedigree Project</B></A><br>
 </blockquote>	
 Life after racing -  Standardbred retirement and retraining<br>
-</blockquote>
-<P>
 <blockquote>
-	<A HREF=https://forms.gle/NbveQ9RchqW2hq2t6> <B>Assignment 5</A> </blockquote>
+	<A HREF=https://mainestandardbred.com/> Maine Standardbred Pleasure Horse Organization</A><br>
+	<A HREF=https://www.sphonj.org/> New Jersey Pleasure Horse Organization</A><br>
+	<A HREF=https://www.standardbredtransition.org/> Standardbred Transition Alliance</A><br>
+	<A HREF=https://www.adoptahorse.org/>Standardbred Retirement Foundation</A>
+</blockquote>
+<A HREF=https://forms.gle/NbveQ9RchqW2hq2t6> <B>Assignment 5 - Final Quiz</B></A><P> 
 <B>Students with Disabilities:</B><BR>
 If you have a disability for which you may be requesting an accommodation, please contact either myself or Ann Smith, Coordinator of Services for Students with Disabilities (Onward Building, 581-2319), as early as possible in the semester.
 <P>
@@ -129,4 +148,4 @@ Black Bears Care Pact: https://umaine.edu/return/black-bears-care/ <P>
 <P>
 </BODY>
 </HTML>
-
+https://www.maine.gov/dacf/harnessracing/laws_statutes.shtml
