--- a/AVS353/REPRO.HTM
+++ b/AVS353/REPRO.HTM
@@ -55,23 +55,7 @@ Attendance and class participation =30%</P>
 </P>
 No text is required for this class.</Blockquote>
 <B>Video Archive</B></I><Blockquote>Videos of lectures may be accessed <A HREF=video_archive_AVS353.htm>here</A></Blockquote>
-<B>Course Policies:</B>
-<Blockquote>
-<P>
-<i>Academic honesty (plagiarism, etc.)</i>  Academic dishonesty includes cheating, plagiarism and all forms of misrepresentation in academic work, and is unacceptable at The University of Maine.  As stated in the University of Maine's online undergraduate "Student Handbook," plagiarism (the submission of another's work without appropriate attribution) and cheating are violations of The University of Maine Student Conduct Code.  An instructor who has probable cause or reason to believe a student has cheated may act upon such evidence, and should report the case to the supervising faculty member or the Department Chair for appropriate action. </p>
-<p>
-<i>Students with disabilities statement:</i> If you have a disability for which you may be requesting an accommodation, please contact Ann Smith, Director of Disabilities Services, 121 East Annex, 581-2319, as early as possible in the term. </p>
-<p>
-<i>Sexual Discrimination Reporting:</i> The University of Maine is committed to making campus a safe place for students. Because of this commitment, if you tell a teacher about an experience of sexual assault, sexual harassment, stalking, relationship abuse (dating violence and domestic violence), sexual misconduct or any form of gender discrimination involving members of the campus, your teacher is required to report this information to the campus Office of Sexual Assault & Violence Prevention or the Office of Equal Opportunity.<P>
-If you want to talk in confidence to someone about an experience of sexual discrimination, please contact these resources:<p>
-For confidential resources on campus: Counseling Center: 207-581-1392 or Cutler Health Center: at 207-581-4000.<br>
-For confidential resources off campus:  Rape Response Services: 1-800-310-0000 or Spruce Run: 1-800-863-9909. <p>
-Other resources:  The resources listed below can offer support but may have to report the incident to others who can help:<p>
-For support services on campus: Office of Sexual Assault & Violence Prevention: 207-581-1406, Office of Community Standards: 207-581-1409, University of Maine Police: 207-581-4040 or 911. Or see the OSAVP website for a complete list of services at http://www.umaine.edu/osavp/<p>
-</Blockquote>
-<B></P>
- </P>
-</P>
+
 <h2><center>Course Materials</center></h2></P>
 </P>
 <P>Review Quizzes</P>
@@ -117,6 +101,39 @@ Check out the video archive for foaling videos <A HREF=video_archive_AVS353.htm>
 <B><P>Breeding Farm Nutrition</P>
 </B><P><Blockquote>Presentation of Breeding Farm Nutritional</P>
 <A HREF=BREDNUT.PDF>click here for slides</A></Blockquote> 
+<H2>Course Policies:</H2>
+<Blockquote>
+<P>
+<B>Academic Honesty Statement: </B><BR>
+Academic honesty is very important. It is dishonest to cheat on exams, to copy term papers, to submit papers written by another person, to fake experimental results, or to copy or reword parts of books or articles into your own papers without appropriately citing the source. Students committing or aiding in any of these violations may be given failing grades for an assignment or for an entire course, at the discretion of the instructor. In addition to any academic action taken by an instructor, these violations are also subject to action under the University of Maine Student Conduct Code.  The maximum possible sanction under the student conduct code is dismissal from the University.
+<P>
+<A HREF=https://www.maine.edu/board-of-trustees/policy-manual/section-314/> Please see the University of Maine System's Academic Integrity Policy  listed in the Board Policy Manual as Policy 314: </A>
+<P>
+<B>Students Accessibility Services Statement</B><BR> 
+If you have a disability for which you may be requesting an accommodation, please contact Student Accessibility Services, 121 East Annex, 581.2319, as early as possible in the term. Students who have already been approved for accommodations by SAS and have a current accommodation letter should meet with me (Robert Causey 207-922-7475 | rcausey@maine.edu) privately as soon as possible.<P>
+<B>Course Schedule Disclaimer (Disruption Clause):</B><BR> 
+In the event of an extended disruption of normal classroom activities (due to COVID-19 or other long-term disruptions), the format for this course may be modified to enable its completion within its programmed time frame. In that event, you will be provided an addendum to the syllabus that will supersede this version.</B><P>
+<B>Observance of Religious Holidays/Events:</B><BR> 
+The University of Maine recognizes that when students are observing significant religious holidays, some may be unable to attend classes or labs, study, take tests, or work on other assignments. If they provide adequate notice (at least one week and longer if at all possible), these students are allowed to make up course requirements as long as this effort does not create an unreasonable burden upon the instructor, department or University. At the discretion of the instructor, such coursework could be due before or after the examination or assignment. No adverse or prejudicial effects shall result to a student’s grade for the examination, study, or course requirement on the day of religious observance. The student shall not be marked absent from the class due to observing a significant religious holiday. In the case of an internship or clinical, students should refer to the applicable policy in place by the employer or site.<P> 
+<B>Sexual Violence Policy</B><P> 
+<B>Sexual Discrimination Reporting</B><BR> The University of Maine is committed to making campus a safe place for students. Because of this commitment, if you tell a faculty or staff member who is deemed a “responsible employee” about sexual discrimination, they are required to report this information to Title IX Student Services or the Office of Equal Opportunity.<P>
+Behaviors that can be “sexual discrimination” include sexual assault, sexual harassment, stalking, relationship abuse (dating violence and domestic violence), sexual misconduct, and gender discrimination.  Therefore, all of these behaviors must be reported.<P>
+ <B>Why do teachers have to report sexual discrimination?</B><P>
+The University can better support students in trouble if we know about what is happening. Reporting also helps us to identify patterns that might arise – for example, if more than one person reports having been assaulted or harassed by the same individual.<P>
+<B> What will happen to a student if a teacher reports?</B><P>
+An employee from Title IX Student Services or the Office of Equal Opportunity will reach out to you and offer support, resources, and information.  You will be invited to meet with the employee to discuss the situation and the various options available to you.<P>
+If you have requested confidentiality, the University will weigh your request that no action be taken against the institution’s obligation to provide a safe, nondiscriminatory environment for all students.  If the University determines that it can maintain confidentiality, you must understand that the institution’s ability to meaningfully investigate the incident and pursue disciplinary action, if warranted, may be limited.  There are times when the University may not be able to honor a request for confidentiality because doing so would pose a risk to its ability to provide a safe, nondiscriminatory environment for everyone. If the University determines that it cannot maintain confidentiality, the University will advise you, prior to starting an investigation and, to the extent possible, will share information only with those responsible for handling the institution’s response.<P>
+The University is committed to the well-being of all students and will take steps to protect all involved from retaliation or harm.<P>
+<B>If you want to talk in confidence</B> to someone about an experience of sexual discrimination, please contact these resources:<P>
+<I>For confidential resources on campus:</I> <B>Counseling Center: 207-581-1392</B> or <B>Cutler Health Center: at 207-581-4000.</B><P>
+<I>For confidential resources off campus:</I> <B> Rape Response Services:</B> 1-800-871-7741 or <B>Partners for Peace:</B> 1-800-863-9909.<P>
+<B>Other resources:</B>  The resources listed below can offer support but may have to report the incident to others who can help:<P>
+For <I>support services on campus:</I> <B>Title IX Student Services: 207-581-1406, Office of Community Standards: 207-581-1406, University of Maine Police: 207-581-4040 or 911.</B><P> 
+<A HREF=https://umaine.edu/titleix/>Visit the Title IX Student Services website at umaine.edu/titleix/ for more information </A>
+</Blockquote>
+<B></P>
+ </P>
+</P>
  
 </BODY>
 </HTML>
