--- a/AVS437/02_Infectious_Agents.html
+++ b/AVS437/02_Infectious_Agents.html
@@ -85,10 +85,10 @@ In addition, bacteria may be classified as Cocci or Rods. Thus we may refer to G
 <em>Treponema pallidum</em> causative agent of syphilis.<br>
 <em> Brucella abortus</em> causative agent of Brucellosis (contagious abortion) in cattle.<p>
 <B><A HREF=https://drive.google.com/file/d/13G9Bmw0L50Ww4PPWhdyeb2WGnq0JaMpo/view?usp=sharing>Intracellular Pathogens</A></B><P>
-Erhlichia risticii<br>
-Rickettsia and Neorichettsia<br>
-Anaplasma marginale<br>
-Chlamydia psittaci<P>
+<A HREF=https://pubmed.ncbi.nlm.nih.gov/10952374/><em>Erhlichia risticii</em></A> - Potomac Horse Fever<br>
+<A HREF=https://www.ncbi.nlm.nih.gov/books/NBK430881/><em>Rickettsia rickettsii</em></A> - Rocky Mountain Spotted Fever (and Neorickettsia)<br>
+<A HREF=https://tvmdl.tamu.edu/2020/10/19/anaplasmosis-in-cattle/><em>Anaplasma marginale</em></A> (anaplasmosis in cattle) and <A HREF=https://www.vet.cornell.edu/departments/riney-canine-health-center/canine-health-information/anaplasmosis#:~:text=Overview,best%20strategy%20to%20avoid%20infection.><em>Anaplasma phagocytophilium</em></A> anaplasmosis in dogs.<br>
+<A HREF=https://www.ncbi.nlm.nih.gov/books/NBK538305/><em>Chlamydia psittaci</em></A> - psittacosis in birds.<P>
 <b>Bacteria without a cell wall</B><BR>
 Mycoplasmae e.g. <A HREF=https://en.wikipedia.org/wiki/Mycoplasma_pneumoniae>Mycoplasma pneumoniae</A>, a causative agent of "walking pneumonia" in people, and contributes to pneumonia in dairy cattle.<br>
 </Blockquote>
