--- a/AVS437/02_Infectious_Agents.html
+++ b/AVS437/02_Infectious_Agents.html
@@ -110,7 +110,7 @@ Mushrooms from this phylum also produce the hallucinogen <A HREF=https://en.wiki
 </Blockquote>
 <Blockquote>
 <B>Prions</B><p>
-<A HREF=https://www.ncbi.nlm.nih.gov/pmc/articles/PMC8770171/>Prions</A> are an important source of disease in domestic animals and humans. They include Scrapie, Pseudorabies, Bovine Spongiform Encephalopathy, and Chronic Wasting Disease of cervids. As a group they are unique in that the causative agent is a protein which spreads by <A HREF=https://www.pnas.org/doi/10.1073/pnas.172403799>folding</A> a precursor of itself protein into the active form. 
+<A HREF=https://www.ncbi.nlm.nih.gov/pmc/articles/PMC8770171/>Prions</A> are an important source of disease in domestic animals and humans. They include Scrapie, Pseudorabies, Bovine Spongiform Encephalopathy, and Chronic Wasting Disease of cervids. As a group they are unique in that the causative agent is a protein which spreads by <A HREF=https://www.pnas.org/doi/10.1073/pnas.172403799>folding</A> a precursor of itself into the active form the protein. 
 
 </Blockquote>
 </body>
